--- a/JCGS_Writeup/Writeup-JCGS.qmd
+++ b/JCGS_Writeup/Writeup-JCGS.qmd
@@ -134,7 +134,7 @@ Current forensic practices rely on examiners to visually inspect bullets under a
 
 Algorithmic comparison methods have demonstrated considerable potential to quantify the similarity between pairwise pieces of evidence. However, current approaches have created a gap between the statistical metrics and the practical understanding of these metrics by practitioners. This gap highlights the need for a more effective method to assist forensic practitioners in assessing and understanding the algorithm's performance. 
 
-Here, we are proposing the forensic bullet comparison visualizer (FBCV), as an interactive interface designed to visualize the  statistical metrics embedded in the context of the data [@wickhamVisualizingStatisticalModels2015] in a manner that is intuitive and accessible to forensic examiners. FBCV leverages linked interactive graphics to allow forensic examiners to engage with the complex algorithmic data at each stage of the process, thereby bridging the gap between statistical analysis and practical forensic application.
+Here, we are proposing the **Forensic Bullet Comparison Visualizer** (FBCV), as an interactive interface designed to visualize the  statistical metrics embedded in the context of the data [@wickhamVisualizingStatisticalModels2015] in a manner that is intuitive and accessible to forensic examiners. FBCV leverages linked interactive graphics to allow forensic examiners to engage with the complex algorithmic data at each stage of the process, thereby bridging the gap between statistical analysis and practical forensic application.
 
 <!-- Interactive graphics section -->
 Interactive graphics allow the user to dynamically explore and manipulate graphical representations of data by means of direct manipulation of a chart's graphical elements -- usually through clicking, dragging, or rescaling [@eickHighInteractionGraphics1995; @swayneIntroductionSpecialIssue1999; @urbanekIPlotsEXtremeNextgeneration2011]. A typical strategy for visualizing complex data is to use high-dimensional plots, incorporating multiple variables and levels of aggregation. However, these plots often pose challenges in interpretability, especially among those unfamiliar with the data [@willsLinkedDataViews2008]. To improve readability, a cogent method is to use linked data views of simpler charts. Linked data views communicate with each other and the underlying data and respond to user interactions by updating their graphical elements accordingly. This linkage system allows for the display of highly interpretable graphs while preserving all relevant information. Users are able to select key features (1) and hide details that are less pertinent at the time (0), allowing for intuitive data exploration [@willsLinkedDataViews2008]. The FBCV leverages linked views to present data at multiple levels of the bullet analysis process.
